# catlab-kit

./: .coverage  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  codex-compare.sh  codex-exec.sh  codex-research  codex-research.sh  codex-worker-launcher-v2.sh  codex-worker-launcher.sh  docker-compose.yml  job.json  pyproject.toml  slash-research.sh  test-command-changes.md
.catlab/docs/: NAMING_CONVENTION.md  RESEARCH_PROMPT_TEMPLATE.md  WORKFLOW_SUMMARY.md
.catlab/research/: 20250926_161324_85499d_codex_pocketbase_research.md  20250926_162258_3465387_codex_test_solution.md  20250926_162950_3491892_codex_nextjs_14_research.md  20250926_165208_3584748_codex_docker_container_optimization_best_practices.md  20250926_165208_3608344_codex_docker_container_optimization_best_practices.md  20250926_165525_3594691_codex_launcher_scripts_analysis.md  20250926_165733_3603576_codex_extract_device_info.js  20250926_171443_3673483_codex_gist_reference_2.md  20250926_171501_3679525_codex_spec_kit_reference_4.md  20250926_172644_3731412_codex_fix_research_references.md  20250926_180604_3884906_codex_clean_citation_format.md  20250926_180627_3910415_codex_test_clean_citation_format.md  (+5 more)
.claude/commands/: cc-ccc.md  (+13 more)
catlab_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
codex-outputs/: NAMING_CONVENTION.md  WORKFLOW_SUMMARY.md  worker_registry.json
config/: webhook-proxy.yaml
coverage/: coverage.xml
docs/: codex-security.md  comparison-report.md  developer-report.md  sandbox-approvals-report.md
pb/: go.mod  main.go
src/: app.py
test-reports/: junit.xml
(+64 files in other folders)
